Second page added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <ul>
     <li>Hello World!</li>
     <li>Welcome to my page, nothing here so far...</li>
+    <li><a href="page2.html">See my second page</a></li>
     <li>More content coming soon!</li>
 </ul>
 &nbsp;
