--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome to 07alexander.github.io</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body style="background-color: yellow">
 <h1>Welcome to 07alexander.github.io</h1>
@@ -15,7 +16,7 @@
 &nbsp;
 &nbsp;
 &nbsp;
-<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;U N D E R &nbsp;  C O N S T R U C T I O N . . .</h1>
+<h1>U N D E R &nbsp;  C O N S T R U C T I O N . . .</h1>
 <img   src="https://d13yacurqjgara.cloudfront.net/users/22930/screenshots/2948657/met.gif" alt="Met">
 
 </body>
