--- a/orange.html
+++ b/orange.html
@@ -14,22 +14,22 @@
 
     <!-- You should properly set the path from the main file. -->
 </head>
-<body style="background-color: black">
+<body style="background-color: white">
 
-    <nav class="navigation">
-        <section class ="container"></section>
-        <a class= ="navigation-title" href="https://milligram.github.io/">
-            <h1 class="title">Milligram</h1>
-            <img class ="img" src="img/webdev(1).jpg">
-        </a>
+<nav class="navigation">
+    <section class ="container"></section>
+    <a class= ="navigation-title" href="https://milligram.github.io/">
+        <h1 class="title">Milligram</h1>
+        <img class ="img" src="img/orange(1).jpg">
+    </a>
 
-        <ul class="navigation-list">
-            <li class="navigation-item">
-                <a class="navigation-link" href="orange.html" data-popover>Orange Page</a>
-            </li>
-        </ul>
+    <ul class="navigation-list">
+        <li class="navigation-item">
+            <a class="navigation-link" href="index.html" data-popover>Main Page</a>
+        </li>
+    </ul>
 
-    </nav>
+</nav>
 
 </body>
 </html>
