Project Zero Updated

--- a/Coding/FrontEnd.html
+++ b/Coding/FrontEnd.html
@@ -70,21 +70,23 @@
     <!-- /.container -->
 </nav>
 
+
 <!-- Page Content -->
 <div class="container">
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+            <img class ="img" src="../img/frame.png">
+            <h1>Coding</h1>
+            <h4>Front End Frameworks</h4>
+            <a href="FrontEnd.html">Front End Frameworks</a> /
+            <a href="Grunt.html">Web Workflows with Grunt.js</a> /
+            <a href="SemanticVersioning.html">Semantic Versioning</a> /
+            <a href="Sublime.html">Up and Running with Sublime Text</a> /
+            <a href="UTF8.html">UTF8</a><br>
 
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
-
+            <p>
+                I went with the Milligram framework (Links to an external site.), it's a ultra light-weight framework designed for better performance and higher productivity for clean code. It has a minimalist approach to make your code clutter-free. I think it's a great starting point for beginners as this framework isn't overwhelming with a bunch of components, but that's also it's downfall as frameworks like bootstrap have more resources and more styling components. I believe it's still a relatively new framework so there isn't much documentation and other resources like the other big players in frameworks.</p>
 
         </div>
     </div>
