--- a/Coding/SemanticVersioning.html
+++ b/Coding/SemanticVersioning.html
@@ -70,21 +70,24 @@
     <!-- /.container -->
 </nav>
 
+
 <!-- Page Content -->
 <div class="container">
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+            <img class ="img" src="../img/semantic-versioning.jpg">
+            <h1>Coding</h1>
+            <h4>Semantic Versioning</h4>
+            <a href="FrontEnd.html">Front End Frameworks</a> /
+            <a href="Grunt.html">Web Workflows with Grunt.js</a> /
+            <a href="SemanticVersioning.html">Semantic Versioning</a> /
+            <a href="Sublime.html">Up and Running with Sublime Text</a> /
+            <a href="UTF8.html">UTF8</a><br>
 
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
-
+            <p>
+                Interesting video, I never thought about what numbers meant when I looked at software and their version number. I had a general idea that the first number of a semantic version was always a big update. As for the other two numbers, I just assumed that they were meaningless and was only meant to show that there were some changes and that's it. Here  (Links to an external site.)is one my favorite apps that utilizes semantic versioning. It's interesting to see that they use the traditional three number versioning until they release 5.0.14.0 and add an additional number, from my research they use the last number for "Additional labels for pre-release and build metadata are available as extensions to the MAJOR.MINOR.PATCH format". I'm still quite confused as to why to really need to add the last number.
+            </p>
 
         </div>
     </div>
