--- a/Design/OptimizeImage.html
+++ b/Design/OptimizeImage.html
@@ -16,7 +16,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
     <style>
         body {
             padding-top: 50px;
@@ -75,17 +74,17 @@
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
-
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
-
-
+            <img class ="img" src="../img/opti.png"><br>
+            <h1>Design</h1>
+            <h4>Optimizing images for the Web</h4>
+            <a href="NPM.html">What is NPM?</a> /
+            <a href="OptimizeImage.html">Optimizing images for the Web</a> /
+            <a href="SEO.html">SEO for eCommerce</a> /
+            <a href="UiUx.html">UI/UX Designer</a> /
+            <a href="WordPress.html">WordPress eCommerce Core Concepts</a><br>
+            <p>
+                Here is my .io (Links to an external site.) page, I'm using the milligram (Links to an external site.) framework that I have selected from week 12. I have created two pages with each page containing a image that was edited on picmonkey (Links to an external site.) and also each page having a link to redirect back to the other page and another link that will redirect to the milligram framework homepage. After resizing both images, I cut the size of the images in half.
+            </p>
         </div>
     </div>
     <!-- /.row -->
