--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -68,7 +68,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12 text-left">
                 <img class = "img" src="img/gettingStarted.png">
                 <h1>Getting Started</h1>
                 <a href="GettingStarted/BecomeWebDeveloper.html">Become a Web Developer</a> /
@@ -88,11 +88,11 @@
             </div>
         </div>
         <!-- /.row -->
-        <p>Copyright © Alexander Phosykeo 2016</p>
+
     </div>
     <!-- /.container -->
 
-
+    <p>Copyright © Alexander Phosykeo 2016</p>
 
     <!-- jQuery Version 1.11.1 -->
     <script src="js/jquery.js"></script>
