--- a/GettingStarted/BecomeWebDeveloper.html
+++ b/GettingStarted/BecomeWebDeveloper.html
@@ -67,15 +67,17 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12 text-left">
                 <img class = "img" src="../img/become.jpg">
                 <h1>Getting Started</h1>
+                <h4>Become a Web Developer</h4>
                 <a href="BecomeWebDeveloper.html"><strong>Become a Web Developer</strong></a> /
                 <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
                 <a href="SelectYourEditor.html">Select Your Editor</a> /
                 <a href="WebHosting.html">Web Hosting</a> /
                 <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a> <br>
-                I don't know anything about web development, but I do know a lot about ftp, ssh, and command line due to my hobby of tinkering with my android phone/rooting my android. I also know a bit about Github basics and version control. When it came to the Front End Developer, I know nothing about the terminology or what they are. Actually when looking at the rest of the skill tree, it becomes very daunting. I honestly never knew there was so much sub-categories and so many steps to becoming a web developer. After watching the video, I feel like I want to become full stack developer, I want to be able to work on the front end and the back end side. There are so many things in the video that went over my head, so I looked up jQuery and found out that it's a library for javascript. Using this library is suppose to make using javascript easier and faster. While I understand some of that, I'm too green to really wrap that around my head. Here are some of the videos I watched:
+                <p>I don't know anything about web development, but I do know a lot about ftp, ssh, and command line due to my hobby of tinkering with my android phone/rooting my android. I also know a bit about Github basics and version control. When it came to the Front End Developer, I know nothing about the terminology or what they are. Actually when looking at the rest of the skill tree, it becomes very daunting. I honestly never knew there was so much sub-categories and so many steps to becoming a web developer. After watching the video, I feel like I want to become full stack developer, I want to be able to work on the front end and the back end side. There are so many things in the video that went over my head, so I looked up jQuery and found out that it's a library for javascript. Using this library is suppose to make using javascript easier and faster. While I understand some of that, I'm too green to really wrap that around my head.
+                </p>
 
 
 
