--- a/GettingStarted/ChromeDevTools.html
+++ b/GettingStarted/ChromeDevTools.html
@@ -16,7 +16,12 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
+    <style>
+        body {
+            padding-top: 50px;
+            /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+        }
+    </style>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -62,25 +67,24 @@
     </div>
     <!-- /.container -->
 </nav>
-<img class = "img" src="../img/gettingStarted.png">
-<h1>Getting Started</h1>
-<a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-<a href="ChromeDevTools.html"><strong>Chrome Dev Tools</strong></a> /
-<a href="SelectYourEditor.html">Select Your Editor</a> /
-<a href="WebHosting.html">Web Hosting</a> /
-<a href="WebSitesVsWebApps.html">Websites vs Web Apps</a>
+
 
 <!-- Page Content -->
 <div class="container">
 
     <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1>A Bootstrap Starter Template</h1>
-            <p class="lead">Complete with pre-defined file paths that you won't have to change!!</p>
-            <ul class="list-unstyled">
-                <li>Bootstrap v3.3.7</li>
-                <li>jQuery v1.11.1</li>
-            </ul>
+        <div class="col-lg-12 text-left">
+            <img class = "img" src="../img/chromeDev.jpg">
+            <h1>Getting Started</h1>
+            <h4>Chrome Dev Tools</h4>
+            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
+            <a href="ChromeDevTools.html"><strong>Chrome Dev Tools</strong></a> /
+            <a href="SelectYourEditor.html">Select Your Editor</a> /
+            <a href="WebHosting.html">Web Hosting</a> /
+            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+
+            My background knowledge with Chrome Developer tools is pretty small. I never knew how much power the Developer Tools had when I first played with them. The video tutorial taught me how easy it is to manipulate a web page on-the-fly. It even has a live preview of what you do on the page, you don't have to refresh the page every time you change code. All of the things covered in the video is all new to me, I just really had no idea how powerful the chrome developer tools really are. I always thought that I had to download the html file then manipulate it myself and open it on a local environment. In the screenshot I provided, all I did was manipulate this page on canvas to display some different texts than the original. I now have a pretty good understanding of what chrome developer tools are and how powerful they can be.
+
         </div>
     </div>
     <!-- /.row -->
