--- a/GettingStarted/WebSitesVsWebApps.html
+++ b/GettingStarted/WebSitesVsWebApps.html
@@ -16,6 +16,12 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+    <style>
+        body {
+            padding-top: 50px;
+            /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+        }
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -62,25 +68,31 @@
     </div>
     <!-- /.container -->
 </nav>
-<img class = "img" src="../img/gettingStarted.png">
-<h1>Getting Started</h1>
-<a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-<a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-<a href="SelectYourEditor.html">Select Your Editor</a> /
-<a href="WebHosting.html">Web Hosting</a> /
-<a href="WebSitesVsWebApps.html"><strong>Websites vs Web Apps</strong></a>
+
 
 <!-- Page Content -->
 <div class="container">
 
     <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1>A Bootstrap Starter Template</h1>
-            <p class="lead">Complete with pre-defined file paths that you won't have to change!!</p>
-            <ul class="list-unstyled">
-                <li>Bootstrap v3.3.7</li>
-                <li>jQuery v1.11.1</li>
-            </ul>
+        <div class="col-lg-12 text-left">
+            <img class = "img" src="../img/webVSapp.jpg">
+            <h1>Getting Started</h1>
+            <h4>Websites VS Web Apps</h4>
+            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
+            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
+            <a href="SelectYourEditor.html">Select Your Editor</a> /
+            <a href="WebHosting.html">Web Hosting</a> /
+            <a href="WebSitesVsWebApps.html"><strong>Websites vs Web Apps</strong></a><br>
+
+            <h5>Site vs App</h5>
+
+            <p>My understanding of a website is that it's really only meant to show you information about a business or whatever content they would like to show. Such as a restaurant posting a website to show their open hours and maybe their menus so potential clients could see the menu without actually having to go to the physical location. While a web application is a website that provides a service online like online banking website where you can check your statements or schedule payments. The web application allows user to interact with the website and manipulate data rather than only being able to see the data content. This website, stackoverflow (Links to an external site.), has an interesting topic on this subject and they mention that "a website is defined by its content, while a web application is defined by its interaction with the user". On msdn (Links to an external site.) they actually talk about the developmental processes, scenarios, and they outline the more technical side between the two.
+            </p>
+
+            <h5>Built It And They Will Come</h5>
+
+            <p>I would love to build a simple web application game. Nothing too hard, just a simple card game using a standard deck of cards. I love video games and I would love to create games one day, but for now, I would like to start with just a simple card game that I used to play with my friends. I made a simple game using C++, but I wonder how developers can port or create games on a website. It looks like it would be so much more difficult than an executable file on a computer. And from what I understand, there is only a limited amount of resource the developer could draw from on a browser. It would be awesome if I could build it for my android phone too. It would also be awesome if I could make a small mock up of Facebook on a small network, just to see how that would work.  Other than that, nothing else comes to mind.
+            </p>
         </div>
     </div>
     <!-- /.row -->
