--- a/TheIndustry.html
+++ b/TheIndustry.html
@@ -68,13 +68,25 @@
         </div>
         <!-- /.container -->
     </nav>
-    <img class="img" src="img/industry.jpg">
+
     <!-- Page Content -->
     <div class="container">
 
         <div class="row">
             <div class="col-lg-12 text-left">
+                <img class="img" src="img/industry.jpg">
                 <h1>The Industry</h1>
+                <a href="TheIndustry/ChromeDeveloperSummit.html"> Chrome Developer Summit 2016</a> /
+                <a href="TheIndustry/DarkWeb.html">Dark Web</a> /
+                <a href="TheIndustry/FTP.html">FTP Software</a> /
+                <a href="TheIndustry/FullStackVsFrontEnd.html">Becoming a Web Developer: Full Stack vs Front End</a> /
+                <a href="TheIndustry/WebDevelopmentJobs.html">Web Development or Web related jobs</a><br>
+
+                <p>After learning the necessary skills and traits from coding to design, you will now have to move onto
+                    <br>the next step, the tech industry. You must get your foot in the door and learn what it takes to
+                    <br>be in the industry. You must also choose your career path to be a front-end, back-end, or full-stack
+                    <br>developer.
+                </p>
 
             </div>
         </div>
