--- a/TheIndustry/ChromeDeveloperSummit.html
+++ b/TheIndustry/ChromeDeveloperSummit.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.ico">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,9 +13,15 @@
     <title>07alexander.io Project Zero</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+    <style>
+    body {
+        padding-top: 50px;
+        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    }
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,22 +45,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">07alexander.io</a>
+                <a class="navbar-brand" href="../index.html">07alexander.io</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="GettingStarted.html">Getting Started</a>
+                        <a href="../GettingStarted.html">Getting Started</a>
                     </li>
                     <li>
-                        <a href="Coding.html">Coding</a>
+                        <a href="../Coding.html">Coding</a>
                     </li>
                     <li>
-                        <a href="Design.html">Design</a>
+                        <a href="../Design.html">Design</a>
                     </li>
                     <li>
-                        <a href="TheIndustry.html">The Industry</a>
+                        <a href="../TheIndustry.html">The Industry</a>
                     </li>
                 </ul>
             </div>
@@ -68,21 +74,19 @@
 
         <div class="row">
             <div class="col-lg-12 text-left">
-                <img class ="img" src="img/orange(1).jpg"><br>
-                <a href="Design/NPM.html">What is NPM?</a> /
-                <a href="Design/OptimizeImage.html">Optimizing images for the Web</a> /
-                <a href="Design/SEO.html">SEO for eCommerce</a> /
-                <a href="Design/UiUx.html">UI/UX Designer</a> /
-                <a href="Design/WordPress.html">WordPress eCommerce Core Concepts</a><br>
+                <img class="img" src="../img/summit.png">
+                <h1>The Industry</h1>
+                <h4>Chrome Developer Summit</h4>
+                <a href="ChromeDeveloperSummit.html"> Chrome Developer Summit 2016</a> /
+                <a href="DarkWeb.html">Dark Web</a> /
+                <a href="FTP.html">FTP Software</a> /
+                <a href="FullStackVsFrontEnd.html">Becoming a Web Developer: Full Stack vs Front End</a> /
+                <a href="WebDevelopmentJobs.html">Web Development or Web related jobs</a><br>
 
                 <p>
-                    Let's put the code aside for now and focus on the design of a web page
-                    <br>While coding will make the website function, we need to implement a design
-                    <br>and add structure to our web page so the the users will able to navigate
-                    <br>and use the website. There are a lot of ways to improve your website through
-                    <br>design. In this section we are going to look at some of the ways that a website
-                    <br>can be improved.
+                    I'm interested in the sign in on the web segment. I love usefulness of sign in credentials that google has provided for easy sign in and also easy sign up. Google makes it easy to sign in to a website making it "frictionless", but it comes at a price. Google authentication or credentials holds the all the keys to all the websites you use, if someone were to gain control over these credentials they will have access to all of your websites and sensitive information. So the user will have a choice to sign in with google or create their own logins and remember it on their own.
                 </p>
+
             </div>
         </div>
         <!-- /.row -->
@@ -93,10 +97,10 @@
     <p>Copyright © Alexander Phosykeo 2016</p>
 
     <!-- jQuery Version 1.11.1 -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
