--- a/TheIndustry/FTP.html
+++ b/TheIndustry/FTP.html
@@ -16,7 +16,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
     <style>
         body {
             padding-top: 50px;
@@ -75,16 +74,24 @@
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+            <img class="img" src="../img/ftp.jpg">
+            <h1>The Industry</h1>
+            <h4>FTP Software</h4>
+            <a href="ChromeDeveloperSummit.html"> Chrome Developer Summit 2016</a> /
+            <a href="DarkWeb.html">Dark Web</a> /
+            <a href="FTP.html">FTP Software</a> /
+            <a href="FullStackVsFrontEnd.html">Becoming a Web Developer: Full Stack vs Front End</a> /
+            <a href="WebDevelopmentJobs.html">Web Development or Web related jobs</a><br>
 
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
+            <p>
+                According to Wiki (Links to an external site.), "The File Transfer Protocol (FTP) is a standard network protocol used to transfer computer files between a client and server on a computer network. FTP is built on a client-server model architecture and uses separate control and data connections between the client and the server."
 
+                FTP or File Transfer Protocol is a useful network protocol that I actually still use today, despite its security flaws. It's a very convenient mode of data transfer that I use when I want to transfer files from and to my phone or my gaming devices simply because I'm too lazy to plug in my phone or utilize my bluetooth. According to this article (Links to an external site.), FTP has a lot of design flaws, one example being,
+
+                FTP Bounce Attack; "Generally a file transfer happens when the source FTP server sends the data to the client which transmits the data to the destination FTP server. When there’s a slow network connection, people often resort to using a proxy FTP which makes the client instructs the data transmission directly between two FTP servers. A hacker can take advantage of this type of file transfer and use a PORT command to request access to ports by posing as a middle man for the file transfer request; then execute port scans on hosts discreetly and gain access data transmitted over the network."
+
+                But as I said before, despite having security flaws, I still like using FTP, I'll just be careful with sensitive data.
+            </p>
 
         </div>
     </div>
