--- a/TheIndustry/WebDevelopmentJobs.html
+++ b/TheIndustry/WebDevelopmentJobs.html
@@ -16,7 +16,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
     <style>
         body {
             padding-top: 50px;
@@ -75,16 +74,18 @@
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+            <img class="img" src="../img/webdevelopment.jpg">
+            <h1>The Industry</h1>
+            <h4>Web Development or Web Related Jobs</h4>
+            <a href="ChromeDeveloperSummit.html"> Chrome Developer Summit 2016</a> /
+            <a href="DarkWeb.html">Dark Web</a> /
+            <a href="FTP.html">FTP Software</a> /
+            <a href="FullStackVsFrontEnd.html">Becoming a Web Developer: Full Stack vs Front End</a> /
+            <a href="WebDevelopmentJobs.html">Web Development or Web related jobs</a><br>
 
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
-
+            <p>
+                Using keywords, web developer jobs in Fresno California, in google search engine I found a website called indeed (Links to an external site.). Looking through indeed, it confirmed what I thought about Fresno's opportunity for web development careers, offering only 11 jobs offers. So I expanded my scope to all of California (Links to an external site.), giving me a total of 9398 jobs available for hire. While Fresno still has a lot more growing to do, California is booming with job opportunities for web developers with an average of $92,202 per year salary, that doesn't sound too bad. From the low-end to the high-end, every company wants HTML and CSS experience at least and most needing JavaScript and SQL. Most job offers also require a B.S. with most asking for a computer science degree. Even the Jr. Web developer job require a lot of experience, I honestly didn't think they required so much experience for entry level positions. I really have to step up my game and apply myself.
+            </p>
 
         </div>
     </div>
