--- a/Coding.html
+++ b/Coding.html
@@ -62,19 +62,28 @@
         </div>
         <!-- /.container -->
     </nav>
-    <img class ="img" src="img/webdev.jpg">
+
 
     <!-- Page Content -->
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1>A Bootstrap Starter Template</h1>
-                <p class="lead">Complete with pre-defined file paths that you won't have to change!!</p>
-                <ul class="list-unstyled">
-                    <li>Bootstrap v3.3.7</li>
-                    <li>jQuery v1.11.1</li>
-                </ul>
+            <div class="col-lg-12 text-left">
+                <img class ="img" src="img/webdev.jpg">
+                <h1>Coding</h1>
+                <a href="Coding/FrontEnd.html">Front End Frameworks</a> /
+                <a href="Coding/Grunt.html">Web Workflows with Grunt.js</a> /
+                <a href="Coding/SemanticVersioning.html">Semantic Versioning</a> /
+                <a href="Coding/Sublime.html">Up and Running with Sublime Text</a> /
+                <a href="Coding/UTF8.html">UTF8</a><br>
+
+                <p>
+                    After we have figured out the basics of web development, we will want to dive into coding
+                    <br>we want to get our environment set up and worry about the design elements of web development later
+                    <br>In this section we are going to cover Frameworks to make coding easier, Grunt to increase our
+                    <br>workflow, find out why we need semantic versions, get sublime up and running, and figure out what UTF8 has to do with web development.
+                </p>
+
             </div>
         </div>
         <!-- /.row -->
