--- a/Coding/UTF8.html
+++ b/Coding/UTF8.html
@@ -70,21 +70,24 @@
     <!-- /.container -->
 </nav>
 
+
 <!-- Page Content -->
 <div class="container">
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+            <img class ="img" src="../img/utf-8.jpg">
+            <h1>Coding</h1>
+            <h4>UTF8</h4>
+            <a href="FrontEnd.html">Front End Frameworks</a> /
+            <a href="Grunt.html">Web Workflows with Grunt.js</a> /
+            <a href="SemanticVersioning.html">Semantic Versioning</a> /
+            <a href="Sublime.html">Up and Running with Sublime Text</a> /
+            <a href="UTF8.html">UTF8</a><br>
 
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
-
+            <p>
+                Very interesting video this week, I know a little about ASCII, but not so much about UTF-8 and Unicode. Looking up UTF-8, I found this website (Links to an external site.) which give me a more in depth explanation of UTF-8. But I ended up more confused as the explanation of UTF-8 is pretty dense. That’s why I enjoyed the video a bit more, it was easier to follow and had a more layman approach. Decided to do some research on Unicode with hopes of a more simple explanation or Unicode. I came across this website (Links to an external site.) and it had a short and concise explanation of Unicode. I never knew that it was used in everything; It has become the standard in all the big companies such as Apple, HP, IBM, and Microsoft to name a few. It’s also required by XML, Java, and Javascript. Unicode has a pretty big reach and it looks like it’s here to stay.
+            </p>
 
         </div>
     </div>
