--- a/Design/NPM.html
+++ b/Design/NPM.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon.ico">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,9 +13,15 @@
     <title>07alexander.io Project Zero</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+    <style>
+        body {
+            padding-top: 50px;
+            /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+        }
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,22 +45,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">07alexander.io</a>
+                <a class="navbar-brand" href="../index.html">07alexander.io</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="GettingStarted.html">Getting Started</a>
+                        <a href="../GettingStarted.html">Getting Started</a>
                     </li>
                     <li>
-                        <a href="Coding.html">Coding</a>
+                        <a href="../Coding.html">Coding</a>
                     </li>
                     <li>
-                        <a href="Design.html">Design</a>
+                        <a href="../Design.html">Design</a>
                     </li>
                     <li>
-                        <a href="TheIndustry.html">The Industry</a>
+                        <a href="../TheIndustry.html">The Industry</a>
                     </li>
                 </ul>
             </div>
@@ -68,20 +74,29 @@
 
         <div class="row">
             <div class="col-lg-12 text-left">
-                <img class ="img" src="img/orange(1).jpg"><br>
-                <a href="Design/NPM.html">What is NPM?</a> /
-                <a href="Design/OptimizeImage.html">Optimizing images for the Web</a> /
-                <a href="Design/SEO.html">SEO for eCommerce</a> /
-                <a href="Design/UiUx.html">UI/UX Designer</a> /
-                <a href="Design/WordPress.html">WordPress eCommerce Core Concepts</a><br>
-
+                <img class ="img" src="../img/npm.png"><br>
+                <h1>Design</h1>
+                <h4>What is NPM?</h4>
+                <a href="NPM.html">What is NPM?</a> /
+                <a href="OptimizeImage.html">Optimizing images for the Web</a> /
+                <a href="SEO.html">SEO for eCommerce</a> /
+                <a href="UiUx.html">UI/UX Designer</a> /
+                <a href="WordPress.html">WordPress eCommerce Core Concepts</a><br>
                 <p>
-                    Let's put the code aside for now and focus on the design of a web page
-                    <br>While coding will make the website function, we need to implement a design
-                    <br>and add structure to our web page so the the users will able to navigate
-                    <br>and use the website. There are a lot of ways to improve your website through
-                    <br>design. In this section we are going to look at some of the ways that a website
-                    <br>can be improved.
+                    This package Express (Links to an external site.) caught my attention, with the motto of "Fast, unopinionated, minimalist web framework". I'm really big on minimalist, simple frameworks. Features include :
+<ul>
+                    <li>Robust routing
+                <li>Focus on high performance
+                <li>Super-high test coverage
+                <li>HTTP helpers (redirection, caching, etc)
+                <li>View system supporting 14+ template engines
+                <li>Content negotiation
+                <li>Executable for generating applications quickly
+                <li>The Express philosophy is to provide small, robust tooling for HTTP servers, making it a great solution for single page applications, web sites, hybrids, or public HTTP APIs.
+                </ul>
+
+
+                    As I look throughout the examples  (Links to an external site.)and tutorials (Links to an external site.), I start to get lost. Maybe in the coming months I'll be able to grasp these new concepts.
                 </p>
             </div>
         </div>
@@ -93,10 +108,10 @@
     <p>Copyright © Alexander Phosykeo 2016</p>
 
     <!-- jQuery Version 1.11.1 -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
 </body>
 
