--- a/Design/UiUx.html
+++ b/Design/UiUx.html
@@ -16,7 +16,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
     <style>
         body {
             padding-top: 50px;
@@ -75,17 +74,17 @@
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
-
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
-
-
+            <img class ="img" src="../img/uiux.jpg"><br>
+            <h1>Design</h1>
+            <h4>UI/UX Designer</h4>
+            <a href="NPM.html">What is NPM?</a> /
+            <a href="OptimizeImage.html">Optimizing images for the Web</a> /
+            <a href="SEO.html">SEO for eCommerce</a> /
+            <a href="UiUx.html">UI/UX Designer</a> /
+            <a href="WordPress.html">WordPress eCommerce Core Concepts</a><br>
+            <p>
+                Interesting video this week, I always thought that as a web developer, we did everything; Such as designing and coding a website. But it looks like web developer is a very broad term. Web designers only design basic brochure pages, UI/UX designer only design the user interaction functionality and they don't even necessarily have to be able to code the functionality of the webpage. Wiki, (Links to an external site.) "The goal of user interface design is to make the user's interaction as simple and efficient as possible, in terms of accomplishing user goals" talks about how the goal is to maximize efficiency for user goals; to me this isn't what I really want to do. Wiki, (Links to an external site.) "User experience design (UX, UXD, UED or XD) is the process of enhancing user satisfaction by improving the usability, accessibility, and pleasure provided in the interaction between the user and the product." talks about UX enhancing user satisfaction; I think this is more up my alley, it's always interesting to me when I visit a website and they have very cool animations or designs to make their products really pop out of the page; I always wonder how they manage to come up with that particular design as I try to reverse engineer their page in my head.
+            </p>
         </div>
     </div>
     <!-- /.row -->
