--- a/GettingStarted/SelectYourEditor.html
+++ b/GettingStarted/SelectYourEditor.html
@@ -16,6 +16,12 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
+    <style>
+        body {
+            padding-top: 50px;
+            /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+        }
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -62,25 +68,23 @@
     </div>
     <!-- /.container -->
 </nav>
-<img class = "img" src="../img/gettingStarted.png">
-<h1>Getting Started</h1>
-<a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-<a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-<a href="SelectYourEditor.html"><strong>Select Your Editor</strong></a> /
-<a href="WebHosting.html">Web Hosting</a> /
-<a href="WebSitesVsWebApps.html">Websites vs Web Apps</a>
 
 <!-- Page Content -->
 <div class="container">
 
     <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1>A Bootstrap Starter Template</h1>
-            <p class="lead">Complete with pre-defined file paths that you won't have to change!!</p>
-            <ul class="list-unstyled">
-                <li>Bootstrap v3.3.7</li>
-                <li>jQuery v1.11.1</li>
-            </ul>
+        <div class="col-lg-12 text-left">
+            <img class = "img" src="../img/editor.png">
+            <h1>Getting Started</h1>
+            <h4>Select Your Editor</h4>
+            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
+            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
+            <a href="SelectYourEditor.html"><strong>Select Your Editor</strong></a> /
+            <a href="WebHosting.html">Web Hosting</a> /
+            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a>
+
+            <p>I'm going to be using Jet Brains: Web Storm (Links to an external site.) as my editor because that's what I've been using for a while now and it's a really good editor. Really easy to use, spell-check, auto-complete integrated to make my life a little easier. I also use Notepad++ (Links to an external site.) for basic editing, I've been using notepad++ for years and it's my go-to when I don't want use a fully-fledged IDE.
+            </p>
         </div>
     </div>
     <!-- /.row -->
