--- a/TheIndustry/DarkWeb.html
+++ b/TheIndustry/DarkWeb.html
@@ -16,7 +16,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
     <style>
         body {
             padding-top: 50px;
@@ -75,16 +74,18 @@
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+            <img class="img" src="../img/darkweb.jpg">
+            <h1>The Industry</h1>
+            <h4>Dark Web</h4>
+            <a href="ChromeDeveloperSummit.html"> Chrome Developer Summit 2016</a> /
+            <a href="DarkWeb.html">Dark Web</a> /
+            <a href="FTP.html">FTP Software</a> /
+            <a href="FullStackVsFrontEnd.html">Becoming a Web Developer: Full Stack vs Front End</a> /
+            <a href="WebDevelopmentJobs.html">Web Development or Web related jobs</a><br>
 
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
-
+            <p>
+                I have heard about the dark web before, mostly that it has a lot to do with criminal activity. But I never knew exactly how it would work. The Tor browser allows anyone to surf the net without having to give up their location and that is the key to the dark web. The dark web is a censorship free world visited by anonymous users. From whistle blower sites, drug site, or even illegal pornography websites; these anonymous users use cryptokey bitcoins to hide their presence and any sort of money trail that is possible. Usually when someone hears dark web, their minds automatically think of bad criminal behavior. But as Jamie Bartlett said in the video, privacy is becoming a commodity rather than a privilege. I think as the world gets more invasive;we are going to shy away from the constant surveillance of our phones or computers and go into the dark web where we can hide and have some privacy from the world. So I agree with the video that the dark web is going mainstream.
+            </p>
 
         </div>
     </div>
