--- a/TheIndustry/FullStackVsFrontEnd.html
+++ b/TheIndustry/FullStackVsFrontEnd.html
@@ -16,7 +16,6 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-
     <style>
         body {
             padding-top: 50px;
@@ -75,16 +74,20 @@
 
     <div class="row">
         <div class="col-lg-12 text-left">
-            <img class = "img" src="../img/webhosting.jpg">
-            <h1>Getting Started</h1>
-            <a href="BecomeWebDeveloper.html">Become a Web Developer</a> /
-            <a href="ChromeDevTools.html">Chrome Dev Tools</a> /
-            <a href="SelectYourEditor.html">Select Your Editor</a> /
-            <a href="WebHosting.html"><strong>Web Hosting</strong></a> /
-            <a href="WebSitesVsWebApps.html">Websites vs Web Apps</a><br>
+            <img class="img" src="../img/fullstack.jpg">
+            <h1>The Industry</h1>
+            <h4>Becoming a Web Developer: Full Stack vs Front End</h4>
+            <a href="ChromeDeveloperSummit.html"> Chrome Developer Summit 2016</a> /
+            <a href="DarkWeb.html">Dark Web</a> /
+            <a href="FTP.html">FTP Software</a> /
+            <a href="FullStackVsFrontEnd.html">Becoming a Web Developer: Full Stack vs Front End</a> /
+            <a href="WebDevelopmentJobs.html">Web Development or Web related jobs</a><br>
 
-            While researching web hosting, I found that there are actually websites that allow you to host for free. I always thought you had to pay to host a website. The free option that I came across was from a website called weebly (Links to an external site.), the only stipulation with hosting free on this website is that you won't have your own domain name. But hey, it's a free web hosting service; it's better than nothing. After looking for a paid alternative, I came across a website you would have probably have heard of before, goDaddy (Links to an external site.). Looking at their hosting paid options, they are pretty affordable, with their lowest option being only $3.99 a month when you renew with them. That's actually not too shabby, maybe I'll look back into them when I consider putting up my web developer portfolio in the future. But as of right now, weebly still looks pretty attractive, seeing as I am still a lowly college student.
+            <p>
+                Front-end web developers work primarily with HTML, CSS, and JavaScript. Back-end development deal with a special server that has to be customized for each user and the user won’t be able to see back-end. Full-stack is dealing with both development processes. In every path of web development, we must master HTML(Hyper-Text-Markup-Language). UX is for user experience and UI is for User interface. CSS is used by the developer to design and style the UI and have a better UX for a web page. Javascript is always changing and sometimes I won’t be compatible with websites because it changes too fast. Databases are essential for Back-end developers, SQL and PHP are currently popular in the industry. The main Server-side scripting languages are .NET, Python, Node JS , ASP.NET, Ruby, and PHP.
+                Keys to becoming a successful developer include being able to read online documentation, examining other programmer’s code, and exploring new ideas. You have to get your hands dirty and just start coding real projects. Typically college graduates get paid more than their non-graduate counterparts. Bootcamps are an optional path for developers as they are accelerated courses that teach you exactly what you need to do in a work environment. Socializing within the development industry is essential, most people get hired through referral rather than on online applications. Core developer tools include IDEs, Text Editors, Terminal, and the browser. Other essential tools include PHPmyadmin, Version Control, frameworks(bootstrap, jQuery, angularJS,React), and wordpress. Agile process is a good way to keep up with fast evolving technology and development. Communication skills are a must for development in a workplace. Staying in the industry will increase your salary and having more education will also allow you to increase your salary. The best way to land a job is to network and socialize at various meetups.
 
+            </p>
 
         </div>
     </div>
