--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-lg-12 text-left">
                 <img class ="img" src="img/front.png" >
                 <h1>Web Development</h1>
                 <p>Web Development is currently a growing field that can often be overwhelming
@@ -83,11 +83,11 @@
             </div>
         </div>
         <!-- /.row -->
-        <p>Copyright © Alexander Phosykeo 2016</p>
+
     </div>
     <!-- /.container -->
 
-
+    <p>Copyright © Alexander Phosykeo 2016</p>
 
     <!-- jQuery Version 1.11.1 -->
     <script src="js/jquery.js"></script>
